Fix #22457 - [Feature] Search exports update

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
@@ -42,6 +42,7 @@ path.ecoreports                          = ECO reports
 path.exchange                            = Exchange
 path.exportallergens                     = Export allergens
 path.exportciteo                         = Export packaging materials
+path.exportclientscorelist				 = Export client scores
 path.exportclientsurvey					 = Export client surveys
 path.exportcompositionpackaging          = Export composition and packaging lists
 path.exportdynamiccharactlist			 = Export list of calculated characteristics
@@ -55,14 +56,17 @@ path.exportncsynthesis                   = Non conformities synthesis
 path.exportnutrients                     = Export nutrients
 path.exportphysicochemicallist           = Export of physico-chemicals
 path.exportproducts                      = Export products
+path.exportprojectscorelist				 = Export project scores
 path.exportprojectsurvey				 = Export project surveys
 path.exportqualitycontrols               = Export quality controls
+path.exportscorelist					 = Export scores
 path.exportspecallergens				 = Export specification allergens
 path.exportspeccompatibilitylist		 = Export non compatible products
 path.exportspeclabelclaimlist			 = Export specification claims
 path.exportspecnutrients				 = Export specification nutrients
 path.exportspecphysicochemicallist		 = Export specification physico-chemicals
 path.exportsupplierscontacts             = Suppliers contacts export
+path.exportsupplierscorelist			 = Export supplier scores
 path.exportsuppliersurvey				 = Export supplier surveys
 path.exportsurvey						 = Export surveys
 path.exportsvhc							 = Export SVHC
