Fix #22696 - [Feature] Fix toxicology form

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
@@ -42,8 +42,8 @@ path.ecoreports                          = ECO reports
 path.exchange                            = Exchange
 path.exportallergens                     = Export allergens
 path.exportciteo                         = Export packaging materials
-path.exportclientscorelist				 = Export client scores
-path.exportclientsurvey					 = Export client surveys
+path.exportclientscorelist               = Export client scores
+path.exportclientsurvey                  = Export client surveys
 path.exportcompositionpackaging          = Export composition and packaging lists
 path.exportdynamiccharactlist            = Export list of calculated characteristics
 path.exportforbiddening                  = Export forbidden ingredients
@@ -56,20 +56,20 @@ path.exportncsynthesis                   = Non conformities synthesis
 path.exportnutrients                     = Export nutrients
 path.exportphysicochemicallist           = Export of physico-chemicals
 path.exportproducts                      = Export products
-path.exportprojectscorelist				 = Export project scores
-path.exportprojectsurvey				 = Export project surveys
+path.exportprojectscorelist              = Export project scores
+path.exportprojectsurvey                 = Export project surveys
 path.exportqualitycontrols               = Export quality controls
-path.exportscorelist					 = Export scores
-path.exportspecallergens				 = Export specification allergens
-path.exportspeccompatibilitylist		 = Export non compatible products
-path.exportspeclabelclaimlist			 = Export specification claims
-path.exportspecnutrients				 = Export specification nutrients
-path.exportspecphysicochemicallist		 = Export specification physico-chemicals
+path.exportscorelist                     = Export scores
+path.exportspecallergens                 = Export specification allergens
+path.exportspeccompatibilitylist         = Export non compatible products
+path.exportspeclabelclaimlist            = Export specification claims
+path.exportspecnutrients                 = Export specification nutrients
+path.exportspecphysicochemicallist       = Export specification physico-chemicals
 path.exportsupplierscontacts             = Suppliers contacts export
-path.exportsupplierscorelist			 = Export supplier scores
-path.exportsuppliersurvey				 = Export supplier surveys
-path.exportsurvey						 = Export surveys
-path.exportsvhc							 = Export SVHC
+path.exportsupplierscorelist             = Export supplier scores
+path.exportsuppliersurvey                = Export supplier surveys
+path.exportsurvey                        = Export surveys
+path.exportsvhc                          = Export SVHC
 path.finishedproduct_hierarchy           = Hierarchy of finished products
 path.geoorigins                          = Geographical origins
 path.gs1_hierarchy                       = GS1 hierarchy
@@ -192,7 +192,7 @@ path.supplierentities                    = Supplier entities
 path.suppliers                           = Suppliers
 path.svhcreasonsforinclusions            = Svhc reasons for inclusions
 path.targetmarkets                       = Target Markets
-path.toxicities                          = Toxicology
+path.toxicities                          = Toxicities
 path.toxing                              = Ingredient toxicology
 path.tradeitemtradechannel               = Distribution channels
 path.tradeitemunitdescriptorcode         = Types of business unit
