--- a/pom.xml
+++ b/pom.xml
@@ -327,7 +327,7 @@
 						<dependency>
 							<groupId>org.apache.maven.surefire</groupId>
 							<artifactId>surefire-junit47</artifactId>
-							<version>3.6.0</version>
+							<version>3.5.0</version>
 						</dependency>
 					</dependencies>
 				</plugin>
@@ -482,6 +482,12 @@
 				<artifactId>sonar-maven-plugin</artifactId>
 				<version>4.0.0.4121</version>
 			</plugin>
+			
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-site-plugin</artifactId>
+			    <version>3.20.0</version>
+			</plugin>
 		</plugins>
 		
 		<extensions>
@@ -520,7 +526,7 @@
 					</reportSet>
 				</reportSets>
 			</plugin>
-			<plugin>
+		   <plugin>
 				<groupId>org.owasp</groupId>
 				<artifactId>dependency-check-maven</artifactId>
 				<version>10.0.4</version>
@@ -539,6 +545,11 @@
 					</reportSet>
 				</reportSets>
 			</plugin>
+		     <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-surefire-report-plugin</artifactId>
+		        <version>3.5.0</version>
+		    </plugin>
 		</plugins>
 	</reporting>
 
@@ -552,7 +563,6 @@
 		<dependency>
 		    <groupId>org.mockito</groupId>
 		    <artifactId>mockito-core</artifactId>
-		    <version>5.14.1</version>
 		    <scope>test</scope>
 		</dependency>
 		<dependency>
