--- a/becpg-plm/becpg-plm-core/pom.xml
+++ b/becpg-plm/becpg-plm-core/pom.xml
@@ -6,7 +6,7 @@
 	    <version>4.2.3</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>4.2.3.93</version>
+    <version>4.2.3.94-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-plm-core</artifactId>
 	<packaging>jar</packaging>
@@ -170,6 +170,6 @@
 	</build>
 
   <scm>
-    <tag>4.2.3.93</tag>
+    <tag>4.2.3.90</tag>
   </scm>
 </project>
