--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
@@ -6,6 +6,7 @@ beCPG.charact.name.format.description                          = Allows you to d
 beCPG.charact.name.format.readonly                             = true
 beCPG.charact.name.format.type                                 = string
 beCPG.comparison.name.format.description                       = Allows you to define for each type the name format to use during the comparison. The format to respect is type1|format1, type2|format2,...
+beCPG.connector.channel.register.activity.description          = Register channel activities from connector
 beCPG.copyOrBranch.propertiesToReset.description               = Allows you to define properties and associations that will not be preserved during a copy or merge, separated by commas
 beCPG.currency.supported.description                           = Allows you to define the currencies supported by the system, separated by commas
 beCPG.datalist.effectiveFilterEnabled.description              = Allows you to filter non-effective datalists
@@ -14,16 +15,6 @@ beCPG.datalist.effectiveFilterEnabled.type                     = string
 beCPG.defaultSearchTemplate.description                        = Allows you to set the default search template used by Alfresco
 beCPG.defaultSearchTemplate.readonly                           = true
 beCPG.defaultSearchTemplate.type                               = string
-
-
-beCPG.remote.rateLimiter.capacity.description=Number of simultaneous requests allowed in the remote API.
-beCPG.remote.rateLimiter.capacity.type=Integer
-beCPG.remote.rateLimiter.refillRate.description=Rate at which the token bucket refills for the remote API rate limiter (token/ms).
-beCPG.remote.rateLimiter.refillRate.type=Double
-
-beCPG.remote.maxResults.limit.description = Maw results limit in remote API
-beCPG.remote.maxResults.limit.type = Integer
-
 beCPG.eco.automatic.apply.description                          = Allows you to specify whether the automatic change order should be applied
 beCPG.eco.automatic.deleteOnApply.description                  = Allows you to specify whether change orders should be deleted after being applied
 beCPG.eco.automatic.enable.description                         = Enables auto wording, auto merge, and auto change order
@@ -66,6 +57,12 @@ beCPG.product.report.showDeprecatedXml.description             = Shows GDA and n
 beCPG.product.searchTemplate.description                       = Allows you to set the default prodReuct search template used by Alfresco
 beCPG.project.name.format.description                          = Allows you to define the display format for project names
 beCPG.quality.sampleId.format.description                      = Allows you to define the sample name format for process orders
+beCPG.remote.maxResults.limit.description                      = Maw results limit in remote API
+beCPG.remote.maxResults.limit.type                             = Integer
+beCPG.remote.rateLimiter.capacity.description                  = Number of simultaneous requests allowed in the remote API.
+beCPG.remote.rateLimiter.capacity.type                         = Integer
+beCPG.remote.rateLimiter.refillRate.description                = Rate at which the token bucket refills for the remote API rate limiter (token/ms).
+beCPG.remote.rateLimiter.refillRate.type                       = Double
 beCPG.report.datasource.maxSizeInBytes.description             = Allows you to define the size (in bytes) of the report datasource from which the system raises a non-met requirement
 beCPG.report.datasource.maxSizeInBytes.readonly                = true
 beCPG.report.datasource.maxSizeInBytes.type                    = Integer
