Fix #24398 - [Feature] Add register channel activity system property

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
@@ -99,6 +99,8 @@ beCPG.decernis.ingredient.analysis.enabled=true
 #Glop
 beCPG.glop.serverUrl=http://becpg-ai/api/glop/compute
 
+# Publication channel
+beCPG.connector.channel.register.activity=false
 
 #Batches
 becpg.batch.automaticECO.reformulateChangedEntities.workerThreads=2
