--- a/becpg-designer/becpg-designer-core/pom.xml
+++ b/becpg-designer/becpg-designer-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.2.2</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	<version>23.2.2.0-SNAPSHOT</version>
+	<version>23.2.2.0</version>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-designer-core</artifactId>
 	<packaging>jar</packaging>
@@ -65,4 +65,8 @@
 		</plugins>
 	</build>
 
+
+  <scm>
+    <tag>23.2.2.0</tag>
+  </scm>
 </project>
