--- a/becpg-integration-runner/pom.xml
+++ b/becpg-integration-runner/pom.xml
@@ -14,7 +14,7 @@
 		<version>23.2.2</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.2.2.0-SNAPSHOT</version>
+    <version>23.2.2.0</version>
 	<dependencies>
 		<dependency>
 			<groupId>fr.becpg</groupId>
@@ -441,4 +441,8 @@
 		</profile>
 	</profiles>
 
+
+  <scm>
+    <tag>23.2.2.0</tag>
+  </scm>
 </project>
