Fix #24398 - [Feature] Fix connector channel audit and activity

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
@@ -100,7 +100,7 @@ beCPG.decernis.ingredient.analysis.enabled=true
 beCPG.glop.serverUrl=https://dev-ai.becpg.fr/api/glop/compute
 
 # Publication channel
-beCPG.channel.list.register.activity=false
+beCPG.connector.channel.register.activity=false
 
 #Batches
 becpg.batch.automaticECO.reformulateChangedEntities.workerThreads=2
