Fix #24065 - [Feature] Add htmlLink feature

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -89,6 +89,7 @@ label.entity                 = Entity
 label.export-search          = Export the result
 label.notify-supplier        = Send notification to supplier
 label.revert                 = Revert
+label.saml                   = Connect with SSO
 label.select-columns.title   = Check Columns to show
 label.ssouser                = SSO user
 label.supplier-account.title = Supplier email address
@@ -99,15 +100,15 @@ like.entity.add.label  = Like
 like.entity.add.tip    = Like this entity
 like.entity.remove.tip = Unlike
 
-linkshare.action.email.body        = Fichier {1} partag\u00E9 via beCPG, consultez-le ici\u00A0: {0}
+linkshare.action.email.body        = File {1} shared from beCPG, look at it here: {0}
 # LinkShare
-linkshare.action.email.label       = Partager par e-mail
-linkshare.action.email.subject     = Fichier partag\u00E9 {1}
-linkshare.action.facebook.label    = Partager via Facebook
-linkshare.action.facebook.message  = Fichier {1} partag\u00E9 via beCPG
-linkshare.action.google-plus.label = Partager via Google+
-linkshare.action.twitter.label     = Partager via Twitter
-linkshare.action.twitter.message   = Fichier {1} partag\u00E9 via beCPG
+linkshare.action.email.label       = Share by Email
+linkshare.action.email.subject     = File Shared {1}
+linkshare.action.facebook.label    = Share using Facebook
+linkshare.action.facebook.message  = File {1} shared from beCPG
+linkshare.action.google-plus.label = Share using Google+
+linkshare.action.twitter.label     = Share using Twitter
+linkshare.action.twitter.message   = File {1} shared from beCPG
 
 menu.basket.empty                = Empty basket
 menu.basket.show                 = Show basket
@@ -138,6 +139,8 @@ message.copy-shareable-links.success          = Links copied to clipboard
 message.create.please-wait                    = Please wait. Creation in progress...
 message.createSupplier.failure                = You do not have the rights to perform this operation
 message.createSupplier.success                = User '{0}' associated to supplier
+message.delete-content.failure                = Error deleting content
+message.delete-content.success                = Content deleted with success
 message.delete.please-wait                    = Please wait. Entity being deleted...
 message.email.notValide                       = Please enter a valid email address.
 message.formulate-entities.failure            = Could not formulate entities
