--- a/becpg-integration-runner/src/main/docker/becpg-base-core/becpg/classes/alfresco-global.properties
+++ b/becpg-integration-runner/src/main/docker/becpg-base-core/becpg/classes/alfresco-global.properties
@@ -187,6 +187,8 @@ trashcan-cleaner.deleteBatchCount=100
 #Feed notifier
 activities.feed.generator.numThreads=1
 activities.feed.generator.batchSize=500
+activities.feedNotifier.numThreads=1
+
 
 
 #Caches
