--- a/becpg-integration-runner/src/main/docker/becpg-test-core/alfresco/alfresco-global.properties
+++ b/becpg-integration-runner/src/main/docker/becpg-test-core/alfresco/alfresco-global.properties
@@ -111,6 +111,7 @@ trashcan-cleaner.deleteBatchCount=100
 #Feed notifier
 activities.feed.generator.numThreads=1
 activities.feed.generator.batchSize=500
+activities.feedNotifier.numThreads=1
 
 
 #Caches
