Fix #24418 - [Assistance] Added gs1:servingSuggestion field

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -255,6 +255,7 @@ gs1_gs1Model.property.gs1_secondaryWeight.title                                 
 gs1_gs1Model.property.gs1_secondaryWidth.title                                            = Width (mm)
 gs1_gs1Model.property.gs1_sellingUnitOfMeasure.description                                = Describes the measurement used for selling unit of the trade item to the end consumer. A trade item may have only one unit of measure
 gs1_gs1Model.property.gs1_sellingUnitOfMeasure.title                                      = Selling Unit Of Measure
+gs1_gs1Model.property.gs1_servingSuggestion.title  	                                      = Serving suggestion
 gs1_gs1Model.property.gs1_sortingBonusCriteria.title                                      = Sorting bonus
 gs1_gs1Model.property.gs1_sortingInstructions.title                                       = Sorting instructions
 gs1_gs1Model.property.gs1_sortingMalusCriteria.title                                      = Sorting malus
