Fix #24333 - [Feature] Citeo professional export

--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get.properties
@@ -74,6 +74,7 @@ data.list.exchange                            = Exchange
 data.list.expenseList                         = Expense
 data.list.exportallergens                     = Export allergens
 data.list.exportciteo                         = Export packaging materials
+data.list.exportciteopro                      = Export packaging materials (Citeo Professional)
 data.list.exportcompositionpackaging          = Export composition and packaging lists
 data.list.exportinglist                       = Export ingredients
 data.list.exportlabelclaimlist                = Export of claims
