--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
@@ -54,7 +54,7 @@ beCPG.security.supplierPermission=Coordinator
 beCPG.currency.supported=\u20AC,$,\u00A3,SFr,z\u0142,kr,R$,$ CA
 
 #Copy and merge
-beCPG.copyOrBranch.propertiesToReset=bcpg:erpCode,bcpg:eanCode,bcpg:eanCodeLevel2,bcpg:eanCodeLevel3,qa:qcSamplesCounter
+beCPG.copyOrBranch.propertiesToReset=bcpg:erpCode,bcpg:eanCode,bcpg:eanCodeLevel2,bcpg:eanCodeLevel3,qa:qcSamplesCounter,bcpg:autoMergeTo
 beCPG.copyOrBranch.typesToReset=qa:controlList,qa:samplingList,qa:stockList
 
 
