--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -78,6 +78,7 @@ bcpg_bcpgmodel.association.bcpg_customsCodeRef.title                            
 bcpg_bcpgmodel.association.bcpg_diluentRef.title                                = Diluent
 bcpg_bcpgmodel.association.bcpg_filBioOrigins.title                             = Biology origins
 bcpg_bcpgmodel.association.bcpg_filGeoOrigins.title                             = Geographical origins
+bcpg_bcpgmodel.association.bcpg_filGeoTransfo.title                             = Countries of transfo
 bcpg_bcpgmodel.association.bcpg_filIngs.title                                   = Ingredients
 bcpg_bcpgmodel.association.bcpg_filRequiredGeoOrigins.title                     = Required geographical origins
 bcpg_bcpgmodel.association.bcpg_glopTargetCharact.title                         = Optimization target
