Fix #24535 - [Bug] Increase delay to 60s before Alfresco adds pending ACL

--- a/becpg-integration-runner/src/main/docker/becpg-base-core/becpg/classes/alfresco-global.properties
+++ b/becpg-integration-runner/src/main/docker/becpg-base-core/becpg/classes/alfresco-global.properties
@@ -46,6 +46,9 @@ system.metadata-query-indexes.ignored=false
 system.metadata-query-indexes-more.ignored=false
 system.remove-jbpm-tables-from-db.ignored=false
 
+# beCPG Fix sharedACL on merge
+system.fixedACLs.maxTransactionTime=60000
+system.fixedACLsUpdater.forceSharedACL=true
 
 #
 # Don't try and recover any index
