--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport.properties
@@ -35,6 +35,10 @@ counter_analysis = COUNTER ANALYSIS
 
 criteria = Criterion
 
+day = D
+
+days = D
+
 dimension = DIMENSIONS
 
 folder = Folder:
@@ -50,6 +54,10 @@ method = METHOD
 method1 = Method
 
 mini = Mini
+
+month = M
+
+months = M
 
 orderId = Order number:
 
