Fix #13550 - [Feature] Update aging report

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/qualitycontrol/QualityControlReport.properties
@@ -33,6 +33,8 @@ contaminant = CONTAMINANTS
 
 counter_analysis = COUNTER ANALYSIS
 
+created = Created :
+
 criteria = Criterion
 
 day = D
@@ -44,8 +46,6 @@ dimension = DIMENSIONS
 folder = Folder:
 
 line = Line : 
-
-manufacturingDate = Manufacturing date : 
 
 maxi = Maxi
 
