--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get.properties
@@ -269,6 +269,7 @@ entity.activity.datalist.delete        = Deleted {0} in the {1} list
 entity.activity.datalist.simple        = Modified the {0} list
 entity.activity.datalist.update        = Modified {0} in the {1} list
 entity.activity.entity                 = Modified the properties of {0} entity
+entity.activity.entity.create          = Created entity {0}
 entity.activity.export                 = Exported the {0} list in file '{1}'
 entity.activity.formulation            = {0} has been formulated
 entity.activity.merge                  = Merged the version {0}
