InProgress #22637 - [Feature] Add laboratories management in stock

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -604,6 +604,8 @@ bcpg_bcpgmodel.type.bcpg_labelingRuleList.description                           
 bcpg_bcpgmodel.type.bcpg_labelingRuleList.title                                 = Labeling rules
 bcpg_bcpgmodel.type.bcpg_labelingTemplate.description                           = Labeling template
 bcpg_bcpgmodel.type.bcpg_labelingTemplate.title                                 = Labeling template
+bcpg_bcpgmodel.type.bcpg_laboratory.description                                 = Laboratory list
+bcpg_bcpgmodel.type.bcpg_laboratory.title                                       = Laboratories
 bcpg_bcpgmodel.type.bcpg_lca.description                                        = Life cycle analysis (Administration)
 bcpg_bcpgmodel.type.bcpg_lca.title                                              = Life cycle analysis
 bcpg_bcpgmodel.type.bcpg_lcaList.description                                    = List of LCA
