Fix #17340 - [Feature] Update Raw material report

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport.properties
@@ -27,6 +27,8 @@ absence = Missing
 
 acceptance = ACCEPTANCE OF THIS SPECIFICATION AND WARRANTY
 
+accuracyInfos = I hereby certify that this information is correct.
+
 acv = LCA
 
 address = Address
@@ -99,6 +101,12 @@ canContain = May contain :
 
 caskStrength = Undiluted?
 
+certified = Certified
+
+cdlFreq = Frequency
+
+cdlQty = Quantity to control
+
 certificatAgence = Certification agency
 
 certificatStandart = Certification standard
@@ -160,6 +168,8 @@ chapterRMOrigin = ORIGIN OF RAW MATERIALS
 chapterRawMaterialOrigin = RAW MATERIALS ORIGIN
 
 chapterSamplesValidation = SAMPLES VALIDATION
+
+chapterSorting = Sorting and marking
 
 chapterSynthesis = SYNTHESIS
 
@@ -422,7 +432,7 @@ mandatoryParticularsForLabelling = Mandatory particulars for labelling
 
 manual = Manuel
 
-material = Material :
+material = Material : 
 
 material2 = Material 
 
@@ -431,6 +441,10 @@ materialCost = Cost /Component
 materials = MATERIALS
 
 maxi = Maxi
+
+mention = Mention
+
+mentions = MENTIONS
 
 method = Method
 
@@ -457,6 +471,8 @@ modified = Modified :
 month = M
 
 months = M
+
+na = Not applicable
 
 name = Product name
 
@@ -515,6 +531,10 @@ packagingGroupCode = Packaging group code
 
 packagingStaples = Packaging staples
 
+packagingType = Type of packaging:
+
+packagingTypeDescription = Description of the type of packaging
+
 page = Page :
 
 palletBoxesPerLayer = Number of case/layer
@@ -569,6 +589,8 @@ pmAdditionalMaterial = Additional material:
 
 pmCoilDiameter = Coil diameter (mm) : 
 
+pmConsumerUsageInstructions = Consumer usage instructions: 
+
 pmCoreDiameter = Chuck diameter (mm) : 
 
 pmDiameter = External diameter (mm) : 
@@ -587,6 +609,14 @@ pmIntLength = Internal width (mm):
 
 pmIntWidth = Internal width (mm): 
 
+pmIsPackagingMarkedReturnable = Mention "packaging / returnable packaging": 
+
+pmPackagingRecyclingProcessTypeCode = Packaging Recycling Process Type: 
+
+pmPackagingRecyclingSchemeCode = Recycling schemes: 
+
+pmPackagingTermsAndConditionCode = Indication of reusable packaging: 
+
 pmPaperWeight = Weight (g/m\u00B2): 
 
 pmPrintColor = Print color : 
@@ -595,13 +625,21 @@ pmPrintNbColors = Number of colors :
 
 pmPrintType = Print type : 
 
-pmPrintVarnish = Varnish : 
+pmPrintVarnish = Print varnish : 
+
+pmSortingBonus = Sorting bonus: 
+
+pmSortingInstructions = Sorting instructions: 
+
+pmSortingMalus = Sorting malus: 
 
 pmThickness = Thickness (mm) : 
 
 pmTypeOther = Finishing : 
 
 poids = Quantity to manufacture 100g of product
+
+position = Position
 
 poste = Position :
 
@@ -650,6 +688,8 @@ productImage = Product image
 productPerBox = Product/Case
 
 productQty = Net weight
+
+productUnit = unit
 
 projectedQty = Projected qty
 
@@ -746,6 +786,8 @@ step = Step
 storageConditions = Storage conditions
 
 su = SU
+
+suitable = Suitable
 
 supplier = Supplier(s)
 
