Fix #22637 - [Feature] Add laboratories management in stock

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
@@ -93,6 +93,7 @@ path.labelingtemplates                   = Labeling templates
 path.labelingtypes                       = Labeling types
 path.labels                              = Labels
 path.labeltypes                          = Label types
+path.laboratories                        = Laboratories
 path.lcadatabases                        = LCA databases
 path.lcalistmethods                      = LCA methods
 path.lcaunits                            = LCA units
