--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -89,6 +89,7 @@ bcpg_bcpgmodel.association.bcpg_ingListClaims.title                             
 bcpg_bcpgmodel.association.bcpg_ingListGeoOrigin.title                          = Geographical origin
 bcpg_bcpgmodel.association.bcpg_ingListGeoTransfo.title                         = Countries of transfo
 bcpg_bcpgmodel.association.bcpg_ingListIng.title                                = Ingredient
+bcpg_bcpgmodel.association.bcpg_laboratories.title                              = Laboratories
 bcpg_bcpgmodel.association.bcpg_lcaListComponent.title                          = Component
 bcpg_bcpgmodel.association.bcpg_lcaListLca.title                                = LCA
 bcpg_bcpgmodel.association.bcpg_lclCertification.title                          = Certification
