InProgess #24278 - [Feature] Add saved search feature

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/groups.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/groups.properties
@@ -9,5 +9,6 @@ becpg.group.licensesupplierconcurrent = beCPG Supplier concurrents licences
 becpg.group.licensewriteconcurrent    = beCPG Concurrents Write licences
 becpg.group.licensewritenamed         = beCPG Named write licences
 becpg.group.olapuser                  = beCPG Olap Users
+becpg.group.savedsearchmgr            = beCPG Saved searches managers
 becpg.group.securityrole              = beCPG Security roles
 becpg.group.systemmgr                 = beCPG System managers
