--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
@@ -85,6 +85,7 @@ bcpg_bcpgmodel.property.bcpg_httpLink5.description              = Enter an HTTP 
 bcpg_bcpgmodel.property.bcpg_httpLink5.title                    = Link 5
 bcpg_bcpgmodel.property.bcpg_isDefaultVariant.title             = Default variant
 bcpg_bcpgmodel.property.bcpg_isDeleted.title                    = Deleted
+bcpg_bcpgmodel.property.bcpg_isGlobalSavedSearch.title          = Available for everyone?
 bcpg_bcpgmodel.property.bcpg_isManualListItem.title             = Manual
 bcpg_bcpgmodel.property.bcpg_lkvValue.title                     = Value
 bcpg_bcpgmodel.property.bcpg_lvCode.title                       = Code
