--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/product/product-list-toolbar.get.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/product/product-list-toolbar.get.properties
@@ -1,13 +1,6 @@
 
-button.create-saved-view                = &nbsp;
-button.create-saved-view.description    = Create a new saved view
-button.delete-saved-view                = &nbsp;
-button.delete-saved-view.description    = Delete the selected saved view
-button.download-report                  = Download report...
-button.duplicate-saved-view             = &nbsp;
-button.duplicate-saved-view.description = Create a copy of the selected saved view
-button.edit-saved-view                  = &nbsp;
-button.edit-saved-view.description      = Edit the details of the selected saved view
+button.download-report = Download report...
+button.show-thumbnails = Show thumbnails
 
 filter.Archived       = Archived
 filter.Compliant      = Compliant
@@ -27,19 +20,6 @@ filter.favourites     = My Favorites
 filter.new            = New
 filter.response       = Response
 filter.treatment      = Treatment
-
-message.create-saved-view.failure    = Unable to create the saved view
-message.create-saved-view.success    = Saved view created successfully
-message.delete-saved-view.failure    = Unable to delete the saved view
-message.delete-saved-view.success    = Saved view deleted successfully
-message.duplicate-saved-view.failure = Unable to duplicate the saved view
-message.duplicate-saved-view.success = Saved view duplicated successfully
-message.edit-saved-view.failure      = Unable to update the saved view
-message.edit-saved-view.success      = Saved view updated successfully
-
-picker.saved-view.choose  = Select a Saved View
-picker.saved-view.default = Default View
-picker.saved-view.none    = None
 
 type.client                  = Client
 type.ecm_changeOrder         = Change order
