--- a/becpg-core/pom.xml
+++ b/becpg-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>3.2.4</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>3.2.4.29-SNAPSHOT</version>
+    <version>3.2.4.29</version>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-core</artifactId>
 	<packaging>jar</packaging>
@@ -144,4 +144,8 @@
             </plugin>
 		</plugins>
 	</build>
+
+  <scm>
+    <tag>3.2.4.29</tag>
+  </scm>
 </project>
