Fix #24280 - [Feature] New Lustucru and Snellman GS1 fields

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
@@ -109,6 +109,7 @@ data.list.exportqualitycontrols               = Export quality controls
 data.list.exportsupplierscontacts             = Suppliers contacts export
 data.list.finishedproduct_hierarchy           = Hierarchy of finished products
 data.list.geoOrigin                           = Geographical origins
+data.list.growingmethodcode					  = Growing methods
 data.list.gs1_hierarchy                       = GS1 hierarchy
 data.list.handlinginstructions                = Handling instructions
 data.list.hazardcategories                    = Hazard categories
@@ -177,6 +178,7 @@ data.list.packaginglevels                     = Levels of packaging
 data.list.packagingmaterial_hierarchy         = Hierarchy of packaging materials
 data.list.packagingrecyclingschemecode        = Recycling schemes
 data.list.packagingtermsandconditionscode     = Indications of reusable packaging
+data.list.packagingfunctioncode               = Packaging function codes
 data.list.packagingtypecode                   = Packaging type codes
 data.list.pallettypecode                      = Pallet type codes
 data.list.personalprotection                  = Personal protections
