--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get.properties
@@ -86,6 +86,7 @@ data.list.exportqualitycontrols               = Export quality controls
 data.list.exportsupplierscontacts             = Suppliers contacts export
 data.list.finishedproduct_hierarchy           = Hierarchy of finished products
 data.list.geoOrigin                           = Geographical origins
+data.list.growingmethodcode					  = Growing methods
 data.list.gs1_hierarchy                       = GS1 hierarchy
 data.list.handlinginstructions                = Handling instructions
 data.list.hazardcategories                    = Hazard categories
@@ -148,6 +149,7 @@ data.list.organoList                          = Organoleptic
 data.list.packMaterial                        = Materials
 data.list.packMaterialList                    = Materials
 data.list.packagingList                       = Packaging
+data.list.packagingfunctioncodes              = Packaging function codes
 data.list.packaginggroupcodes                 = Packaging group  codes
 data.list.packagingkit_hierarchy              = Hierarchy of packaging kits
 data.list.packaginglevels                     = Levels of packaging
