InProgress #24513 - [Feature] In progress n+2 n+3 cost report

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport.properties
@@ -219,6 +219,7 @@ costType = Cost Type
 
 costType.currentCost  = Current Cost
 costType.futureCost   = Future Cost
+costType.futureCost2  = Future Cost 2
 costType.previousCost = Previous Cost
 
 costUnitPerSU = Cost {priceListUnit}/SU
