Fix #24278 - [Feature] Add saved search feature

--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-data-lists/entity-toolbar.get.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-data-lists/entity-toolbar.get.properties
@@ -2,6 +2,14 @@
 action.sub-project.create.title = Create a sub project
 
 button.bulk-action-create                    = Bulk create
+button.create-saved-search                   = &nbsp;
+button.create-saved-search.description       = Create a new saved search
+button.delete-saved-search                   = &nbsp;
+button.delete-saved-search.description       = Delete selected saved search button.duplicate-saved-search = &nbsp;
+button.duplicate-saved-search                = &nbsp;
+button.duplicate-saved-search.description    = Create a copy of the selected saved search button.edit-saved-search = &nbsp;
+button.edit-saved-search                     = &nbsp;
+button.edit-saved-search.description         = Edit details of selected saved search
 button.entity-actions                        = Actions
 button.entity-add-aspect                     = &nbsp;
 button.entity-add-aspect.description         = Add an aspect
@@ -38,9 +46,11 @@ button.toggle-critical-path.description      = Show critical path
 button.toggle-gantt.description              = Toggle Gantt chart
 button.toggle-target-dates.description       = Toggle target dates
 
+label.edit-saved-search.title         = Edit saved search
 label.edit-variant.title              = Edit current variant
 label.entity-reports-parameters.title = Reports parameters
 label.new-row.title                   = Create New Item
+label.new-saved-search.title          = New saved search
 label.new-variant.title               = Create new variant
 label.product-metadata.title          = Formulation properties
 label.project-metadata.title          = Project properties
@@ -53,10 +63,18 @@ menu.selected-items.duplicate    = Duplicate
 
 message.confirm.delete.description     = Are you sure you want to delete {0} items?
 message.confirm.delete.title           = Delete {0} Items
+message.create-saved-search.failure    = Failed to create saved search
+message.create-saved-search.success    = Saved search created successfully
+message.delete-saved-search.failure    = Failed to delete saved search
+message.delete-saved-search.success    = Saved search deleted successfully
 message.delete.failure                 = Could not delete items
 message.delete.success                 = Successfully deleted {0} items
+message.duplicate-saved-search.failure = Failed to duplicate saved search
+message.duplicate-saved-search.success = Saved search duplicated with success
 message.duplicate.failure              = Could not duplicate items
 message.duplicate.success              = Successfully duplicated {0} items
+message.edit-saved-search.failure      = Failed to update saved view
+message.edit-saved-search.success      = Saved search updated successfully
 message.formulate.failure              = Could not formulate
 message.formulate.please-wait          = Please wait, formulation in progress...
 message.formulate.success              = Successfully formulated
@@ -67,3 +85,6 @@ message.new-row.failure                = Could not add new item to the Data List
 message.new-row.success                = Successfully added new item
 message.sub-project.create.please-wait = Creating sub project please wait...
 message.sub-project.create.success     = Sub project created with success
+
+picker.saved-search.choose = Saved searches
+picker.saved-search.none   = None
