InPrgress #9778 - [Bug] Fix search forms to use in DB search

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel.properties
@@ -109,7 +109,7 @@ bcpg_bcpgmodel.property.bcpg_nrTimeNumber.title                 = X days
 bcpg_bcpgmodel.property.bcpg_nrTimeType.title                   = Changes
 bcpg_bcpgmodel.property.bcpg_nrVersionFilter.title              = Only changed version
 bcpg_bcpgmodel.property.bcpg_parentLevel.title                  = Parent
-bcpg_bcpgmodel.property.bcpg_physicoChemCode.title              = Physicochemical characteristic code
+bcpg_bcpgmodel.property.bcpg_physicoChemCode.title              = Code
 bcpg_bcpgmodel.property.bcpg_regulatoryFormulatedDate.title     = Regulatory formulated date
 bcpg_bcpgmodel.property.bcpg_sort.title                         = Sort
 bcpg_bcpgmodel.property.bcpg_startEffectivity.title             = Start of effectivity
