InProgress #9778 - [Feature] Debug commit to remove

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/log4j2.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/log4j2.properties
@@ -165,3 +165,8 @@ logger.FeedCleaner.level=fatal
 logger.becpg-test.name=fr.becpg.test
 logger.becpg-test.level=debug
   
+logger.DebugSearch.name=org.alfresco.repo.search.impl.DbOrIndexSwitchingQueryLanguage
+logger.DebugSearch.level=debug
+  
+  
+  
