InProgress #9778 - [Bug] Fix search forms to use in DB search

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/log4j2.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/log4j2.properties
@@ -165,8 +165,11 @@ logger.FeedCleaner.level=fatal
 logger.becpg-test.name=fr.becpg.test
 logger.becpg-test.level=debug
   
-logger.DebugSearch.name=org.alfresco.repo.search.impl.DbOrIndexSwitchingQueryLanguage
-logger.DebugSearch.level=debug
+#logger.DebugSearch.name=org.alfresco.repo.search.impl.DbOrIndexSwitchingQueryLanguage
+#logger.DebugSearch.level=debug
+#  
+#logger.DebugSearch2.name=fr.becpg.repo.solr
+#logger.DebugSearch2.level=debug
   
   
   
