--- a/becpg-integration-runner/src/main/docker/becpg-test-core/alfresco/alfresco-global.properties
+++ b/becpg-integration-runner/src/main/docker/becpg-test-core/alfresco/alfresco-global.properties
@@ -134,6 +134,7 @@ system.new-node-transaction-indexes.ignored=false
 
 #beCPG disable contentPropertyRestrictions for perfs
 contentPropertyRestrictions.enabled=false
+search.solrTrackingSupport.ignorePathsForSpecificTypes=true
 
 
 #Mail
