--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
@@ -57,7 +57,9 @@ beCPG.currency.supported=\u20AC,$,\u00A3,SFr,z\u0142,kr,R$,$ CA
 beCPG.copyOrBranch.propertiesToReset=bcpg:erpCode,bcpg:eanCode,bcpg:eanCodeLevel2,bcpg:eanCodeLevel3,qa:qcSamplesCounter,bcpg:autoMergeTo
 beCPG.copyOrBranch.typesToReset=qa:controlList,qa:samplingList,qa:stockList
 
-
+#Search
+#By default index is disable on entity datalists (product/project/quality) list datalist items to index
+beCPG.solr.enableIndexForTypes=pjt:taskList,pjt:deliverableList
 
 # Enable/Disable automatic ECCM
 beCPG.eco.automatic.enable=true
