Fix #22696 - [Feature] Improve toxicology

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -304,7 +304,8 @@ bcpg_bcpgmodel.property.bcpg_ingToxDermalAbsorption.title                       
 bcpg_bcpgmodel.property.bcpg_ingToxMaxOcularIrritation.title                    = Max ocular irritation (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMaxPhototoxic.title                          = Max phototoxic (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMaxSensitization.title                       = Max sensitization (%)
-bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritation.title                      = Max skin irritation (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritationLeaveOn.title               = Max skin irritation leave-on (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritationRinseOff.title              = Max skin irritation rinse-off (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMosMoe.title                                 = MoS/MoE
 bcpg_bcpgmodel.property.bcpg_ingToxPodSystemic.title                            = POD systemic (mg/kg/d)
 bcpg_bcpgmodel.property.bcpg_ingTypeDecThreshold.description                    = The type is detailed when percentage is exceeded
@@ -803,7 +804,8 @@ listconstraint.bcpg_synchronisableStates.Template                     = Template
 listconstraint.bcpg_toxTypesConstraint.OcularIrritation               = Ocular irritation
 listconstraint.bcpg_toxTypesConstraint.PhototoxicalPotential          = Phototoxical potential
 listconstraint.bcpg_toxTypesConstraint.Sensitization                  = Sensitization
-listconstraint.bcpg_toxTypesConstraint.SkinIrritation                 = Skin irritation
+listconstraint.bcpg_toxTypesConstraint.SkinIrritationLeaveOn          = Skin irritation leave-on
+listconstraint.bcpg_toxTypesConstraint.SkinIrritationRinseOff         = Skin irritation rinse-off
 listconstraint.bcpg_toxTypesConstraint.SystemicIngredient             = Systemic ingredient
 listconstraint.bcpg_variantColumns.bcpg_variantColumn1                = Variant 1
 listconstraint.bcpg_variantColumns.bcpg_variantColumn2                = Variant 2
