Fix #24278 - [Feature] Add Saved search feature

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages.properties
@@ -91,6 +91,9 @@ org.alfresco.documentlibrary.entity-liked   = {1} liked entity {0}
 
 report.logo.fileName.prefix = report_logo
 
+spaces.savedsearches.description = Saved Searches
+spaces.savedsearches.name        = Saved Searches
+
 state.Archived   = 'Archived'
 state.Cancelled  = 'Cancelled'
 state.Closed     = 'Closed'
